--- a/shopping/pom.xml
+++ b/shopping/pom.xml
@@ -112,6 +112,14 @@
 		    <version>2.8.5</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-websocket</artifactId>
+		    <version>5.1.5.RELEASE</version>
+		</dependency>
+		
+		
 				
 		<!-- AspectJ -->
 		<dependency>
