--- a/shopping/pom.xml
+++ b/shopping/pom.xml
@@ -119,6 +119,13 @@
 		    <version>5.1.5.RELEASE</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-messaging</artifactId>
+		    <version>5.1.5.RELEASE</version>
+		</dependency>
+		
 		
 				
 		<!-- AspectJ -->
