--- a/shopping/pom.xml
+++ b/shopping/pom.xml
@@ -126,6 +126,14 @@
 		    <version>5.1.5.RELEASE</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		    <version>5.1.5.RELEASE</version>
+		</dependency>	
+
+
+
 		
 				
 		<!-- AspectJ -->
